<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="#EDEBD3"
    android:layout_height="match_parent"
    android:orientation="vertical">
   <TextView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_gravity="center"
       android:text="@string/registration_form"
       android:textStyle="bold"
       android:textColor="#D30048"
       android:layout_margin="5dp"
       android:textSize="18dp"
       />
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        android:elevation="10dp"
        android:layout_margin="10dp"
        >


   <ScrollView
       android:layout_width="match_parent"
       android:layout_margin="10dp"
       android:scrollbars="none"
       android:layout_height="match_parent"
       >
      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical"
          >
          <de.hdodenhof.circleimageview.CircleImageView
              android:layout_width="150dp"
              android:layout_height="150dp"
              android:src="@drawable/img1"
              android:id="@+id/imagechoose"
              android:layout_gravity="center"
              />

   <com.google.android.material.textfield.TextInputLayout
       android:id="@+id/textInputLayoutname"
       style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       app:boxStrokeColor="#C6B200"
       app:boxStrokeWidth="2dp"
       app:errorEnabled="true"
       app:errorTextColor="#BF0000"
       app:hintTextColor="@color/black">

      <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/name"
          android:layout_width="match_parent"
          android:drawableEnd="@drawable/baseline_person_24"
          android:layout_height="wrap_content"
          android:hint="@string/enter_your_name"
          android:inputType="text"/>
   </com.google.android.material.textfield.TextInputLayout>
  <com.google.android.material.textfield.TextInputLayout
       android:id="@+id/textInputLayoutphone"
       style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       app:boxStrokeColor="#C6B200"
       app:boxStrokeWidth="2dp"
       app:errorEnabled="true"
       app:errorTextColor="#BF0000"
       app:hintTextColor="@color/black">

      <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/phone"
          android:layout_width="match_parent"
          android:drawableEnd="@drawable/baseline_call_24"
          android:layout_height="wrap_content"
          android:hint="Enter Your Phone No."
          android:inputType="number"/>

   </com.google.android.material.textfield.TextInputLayout>
 <com.google.android.material.textfield.TextInputLayout
       android:id="@+id/textInputLayoutemail"
       style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       app:boxStrokeColor="#C6B200"
       app:boxStrokeWidth="2dp"
       app:errorEnabled="true"
       app:errorTextColor="#BF0000"
       app:hintTextColor="@color/black">

      <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/email"
          android:layout_width="match_parent"
          android:drawableEnd="@drawable/baseline_email_24"
          android:layout_height="wrap_content"
          android:hint="@string/enter_your_email_i_d"
          android:inputType="text"/>
   </com.google.android.material.textfield.TextInputLayout>
  <com.google.android.material.textfield.TextInputLayout
       android:id="@+id/textInputLayoutaddress"
       style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       app:boxStrokeColor="#C6B200"
       app:boxStrokeWidth="2dp"
       app:errorEnabled="true"
       app:errorTextColor="#BF0000"
       app:hintTextColor="@color/black">

      <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/address"
          android:layout_width="match_parent"
          android:drawableEnd="@drawable/baseline_add_location_alt_24"
          android:layout_height="wrap_content"
          android:hint="@string/enter_your_address"
          android:inputType="text"/>
   </com.google.android.material.textfield.TextInputLayout>

         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="end"
             android:text="@string/school_academic_exams"
             android:textStyle="bold"
             android:textColor="#0D91FA"
             android:layout_margin="5dp"
             android:textSize="14dp"
             />
         <Spinner
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
            android:id="@+id/schoolAcadmicExam"
             android:background="#FAF6D8"
             android:layout_margin="5dp"
            />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:text="@string/general_competition"
             android:textStyle="bold"
             android:textColor="#D30048"
             android:layout_margin="5dp"
             android:textSize="18dp"
             />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="end"
             android:text="@string/ssc_exams"
             android:textStyle="bold"
             android:textColor="#0D91FA"
             android:layout_margin="5dp"
             android:textSize="14dp"
             />
         <Spinner
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/ssc"
             android:background="#FAF6D8"
             android:layout_margin="5dp"
             />

          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_gravity="end"
              android:layout_margin="5dp"
              android:text="@string/railway_exams"
              android:textColor="#0D91FA"
              android:textSize="14dp"
              android:textStyle="bold" />
         <Spinner
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/railway"
             android:background="#FAF6D8"
             android:layout_margin="5dp"
             />

         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="end"
             android:text="@string/defence"
             android:textStyle="bold"
             android:textColor="#0D91FA"
             android:layout_margin="5dp"
             android:textSize="14dp"
             />
         <Spinner
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/defence"
             android:background="#FAF6D8"
             android:layout_margin="5dp"
             />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="end"
             android:text="@string/police_exams"
             android:textStyle="bold"
             android:textColor="#0D91FA"
             android:layout_margin="5dp"
             android:textSize="14dp"
             />
         <Spinner
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/police"
             android:background="#FAF6D8"
             android:layout_margin="5dp"
             />

         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="end"
             android:text="@string/civil_services_exams"
             android:textStyle="bold"
             android:textColor="#0D91FA"
             android:layout_margin="5dp"
             android:textSize="14dp"
             />
         <Spinner
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/cicilServices"
             android:background="#FAF6D8"
             android:layout_margin="5dp"
             />

         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="end"
             android:text="@string/banking_exams"
             android:textStyle="bold"
             android:textColor="#0D91FA"
             android:layout_margin="5dp"
             android:textSize="14dp"
             />
         <Spinner
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/banking"
             android:background="#FAF6D8"
             android:layout_margin="5dp"
             />

         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="end"
             android:text="@string/entrance_exams"
             android:textStyle="bold"
             android:textColor="#0D91FA"
             android:layout_margin="5dp"
             android:textSize="14dp"
             />
         <Spinner
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/entrance"
             android:background="#FAF6D8"
             android:layout_margin="5dp"
             />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="end"
             android:text="@string/current_affairs_exams"
             android:textStyle="bold"
             android:textColor="#0D91FA"
             android:layout_margin="5dp"
             android:textSize="14dp"
             />
         <Spinner
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/currentaffairs"
             android:background="#FAF6D8"
             android:layout_margin="5dp"
             />

          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_gravity="end"
              android:textStyle="bold"
              android:textColor="#0D91FA"
              android:layout_margin="5dp"
              android:textSize="14dp"
              />
/

          <androidx.appcompat.widget.AppCompatButton
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
            android:text="@string/submit"
            android:textStyle="bold"
              android:id="@+id/submitbtn"
            android:textColor="@color/white"
             android:layout_gravity="end"
            android:background="@drawable/gradiant2"
            android:textSize="17dp"
            />


          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_gravity="end"
              android:textStyle="bold"
              android:textColor="#0D91FA"
              android:layout_margin="5dp"
              android:textSize="14dp"
              />

      </LinearLayout>
   </ScrollView>
    </androidx.cardview.widget.CardView>
   </LinearLayout>
