<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EDEBD3"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_gravity="center"
    tools:context=".ui.TestFragment">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/registration_form"
        android:layout_margin="10dp"
        android:textColor="#BC7000"
        android:textSize="18dp"
        android:textStyle="bold" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:elevation="10dp"
        app:cardCornerRadius="10dp">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:text="@string/uplode_current_photo" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/imageChoose"
                    android:layout_width="150dp"
                    android:layout_height="130dp"
                    android:layout_gravity="center"
                    android:src="@drawable/img2" />

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:backgroundTint="#EDEBD3"
                    android:elevation="10dp"
                    app:cardCornerRadius="10dp">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/textInputLayoutname"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:boxStrokeColor="#C6B200"
                            app:boxStrokeWidth="2dp"
                            app:errorEnabled="true"
                            app:errorTextColor="#BF0000"
                            app:hintTextColor="@color/black">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/name"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:drawableEnd="@drawable/baseline_person_3_24"
                                android:hint="@string/enter_your_name"
                                android:inputType="text"
                                android:padding="10dp" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/textInputLayoutphone"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:boxStrokeColor="#C6B200"
                            app:boxStrokeWidth="2dp"
                            app:errorEnabled="true"
                            app:errorTextColor="#BF0000"
                            app:hintTextColor="@color/black">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/phone"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:drawableEnd="@drawable/baseline_settings_phone_24"
                                android:hint="Enter Your Phone No."
                                android:inputType="number"
                                android:padding="10dp" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/textInputLayoutemail"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:boxStrokeColor="#C6B200"
                            app:boxStrokeWidth="2dp"
                            app:errorEnabled="true"
                            app:errorTextColor="#BF0000"
                            app:hintTextColor="@color/black">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/email"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:drawableEnd="@drawable/baseline_mark_email_unread_24"
                                android:hint="@string/enter_your_email_i_d"
                                android:inputType="text"
                                android:padding="10dp" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/textInputLayoutaddress"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:boxStrokeColor="#C6B200"
                            app:boxStrokeWidth="2dp"
                            app:errorEnabled="true"
                            app:errorTextColor="#BF0000"
                            app:hintTextColor="@color/black">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/address"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:drawableEnd="@drawable/baseline_add_location_alt_24"
                                android:hint="@string/enter_your_address"
                                android:inputType="text"
                                android:padding="10dp" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_margin="5dp"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:text="Category Of Exam "
                                android:textColor="#BC7000"
                                android:textSize="14dp"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="5dp"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:text="Type Of Exam "
                                android:textColor="#BC7000"
                                android:textSize="14dp"
                                android:textStyle="bold" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">


                            <Spinner
                                android:id="@+id/categoryExamForm"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="5dp"
                                android:layout_weight="1"
                                android:background="#F8F5F5"
                                android:padding="5dp" />

                            <Spinner
                                android:id="@+id/examTypeSpinnerForm"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="5dp"
                                android:layout_weight="1"
                                android:background="#F8F5F5"
                                android:padding="5dp" />
                        </LinearLayout>


                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/addBtnForm"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end"
                            android:layout_margin="10dp"
                            android:background="@drawable/gr2"
                            android:padding="10dp"
                            android:src="@drawable/baseline_add_24"
                            android:textStyle="bold"

                            />

                        <TextView
                            android:id="@+id/optionSelectedTextviewForm"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:layout_margin="10dp"
                            android:background="#F8F5F5" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_gravity="center"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:text="Test Fee:₹10 but 50% discount\n              so pay only ₹5!"
                              android:textColor="#FF0000"
                            />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_margin="10dp"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                        android:layout_weight="1"
                            android:text="Click this link to pay:-"
                              android:textColor="#000000"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:id="@+id/rspay"
                            android:text="https://wa.me/+7739717389"
                              android:textColor="@color/purple_700"
                            />

                    </LinearLayout>

                    </LinearLayout>
                </androidx.cardview.widget.CardView>


                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/submitBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/gradiant2"
                    android:text="@string/submit"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </ScrollView>
    </androidx.cardview.widget.CardView>



</FrameLayout>